# psurface

./: .gitignore  .travis.yml  AmiraMeshIO.cpp  AmiraMeshIO.h  Box.h  COPYING  CircularPatch.cpp  CircularPatch.h  ContactBoundary.h  ContactMapping.cpp  ContactMapping.h  ContactToolBox.h  DirectionFunction.h  DomainPolygon.cpp  DomainPolygon.h  Domains.cpp  Domains.h  EdgeIntersectionFunctor.h  GlobalNodeIdx.h  GmshIO.cpp  GmshIO.cpp~  GmshIO.h  GmshIO.h~  Hdf5IO.cpp  Hdf5IO.cpp~  Hdf5IO.h  Hdf5IO.h~  HxParamToolBox.cpp  HxParamToolBox.h  INSTALL  IntersectionPrimitive.h  IntersectionPrimitiveCollector.cpp  IntersectionPrimitiveCollector.h  Iterators.cpp  Makefile.am  Makefile.standalone  McPointerSurfaceParts.h  McSurfaceBase.h  MultiDimOctree.h  MyMcVec3f.h  (+75 more)
doc/: Doxyfile
dune/: common.hh  dataarraywriter.hh  exceptions.hh  nullptr.hh  shared_ptr.hh  streams.hh  typetraits.hh  vtuwriter.hh
m4/: amiramesh.m4  ax_cxx_compile_stdcxx_11.m4  dune_mpi.m4  hdf5.m4
test/: Makefile.am  gmshiotest.cpp  simplifytest.cpp  sparsematrixtest.cpp
