# -*- tab-width: 4; indent-tabs-mode: nil -*-
# $Id$

# Magic variable: all programs in TESTS are run when 'make check' is called.
TESTS = gmshiotest

# programs just to build when "make check" is used
check_PROGRAMS = $(TESTS)

# define the programs (in alphabetical order)
gmshiotest_SOURCES = gmshiotest.cpp

